bug put pessoa